# teapot

./: .gitignore  .prettierrc.json  ARCHITECTURE.md  App.axaml  App.axaml.cs  CI_CD.md  INSTALL.md  LICENSE  Program.cs  README.md  SYSTEM_DESIGN.md  TAURI_MIGRATION.md  Teapot.csproj  ViewLocator.cs  app.manifest  eslint.config.mjs  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
Models/: Authentication.cs  CollectionModel.cs  EnvironmentModel.cs  Header.cs  HistoryItemModel.cs  HttpConstants.cs  HttpRequestModel.cs  HttpResponseModel.cs  JsonTreeNode.cs  Parameter.cs
Services/: CollectionService.cs  EnvironmentService.cs  HistoryService.cs  HttpService.cs  ICollectionService.cs  IEnvironmentService.cs  IHistoryService.cs  IHttpService.cs  IJsonService.cs  IRequestPanelViewModelFactory.cs  IWorkingRequestsService.cs  JsonService.cs  RequestPanelViewModelFactory.cs  WorkingRequestsService.cs
ViewModels/: CollectionItemViewModel.cs  MainWindowViewModel.cs  RequestPanelViewModel.cs  SidebarControlViewModel.cs  ViewModelBase.cs
Views/: AuxiliaryPanelControl.axaml  AuxiliaryPanelControl.axaml.cs  MainWindow.axaml  MainWindow.axaml.cs  MainWorkspaceControl.axaml  MainWorkspaceControl.axaml.cs  RequestPanel.axaml  RequestPanel.axaml.cs  SidebarControl.axaml  SidebarControl.axaml.cs
src/: App.vue  main.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: http_client.rs  lib.rs
tests/: setup.ts
(+76 files in other folders)
