[package]
name = "teapot"
version = "0.1.0"
description = "Teapot, an API buddy"
authors = ["zzzdong <kuwater@163.com>"]
license = "MIT"
repository = "https://github.com/zzzdong/teapot"
homepage = "https://github.com/zzzdong/teapot"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
reqwest = { version = "0.13", features = ["json", "multipart", "cookies"] }
bytes = "1.0"
serde_cbor = "0.11"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }

